changed to bulk insertion of testdata
